2006-01-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/qucsdigi.1: Fixed documentation of command line
	arguments of the qucsdigi script.

2006-01-15  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/internal.html: Added German translation of file
	format description.

2006-01-06  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/matching.html, docs/de/characters.html: Translated
	matching circuits and list of special characters into German.

2006-01-04  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/start_digi.html: Added german translation of the
	"Getting started with digital simulations".

2005-10-26  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/mathfunc.html, docs/en/mathfunc.html: Added
	descriptions of stos(), ytor(), rtoy() and corrected rtoz(),
	ztor(), stoz(), ztos(), stoy(), ytos() entries.

2005-06-06  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Added unwrap(),
	rad2deg() and deg2rad() descriptions.

2005-05-21  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented
	interpolate() function.

2005-02-28  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/*.html: Fixed loads of typos.  Anyway, great
	translation this.  Thanks a lot, Jens!

2005-02-28  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* docs/de/index.html: Committed german documentation translated
	by Jens Flucke.

2004-10-23  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/index.html, docs/es/index.html: Added links to online
	technical documentation and examples.

2004-10-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/es/index.html: Updated spanish documentation pages.

2004-09-30  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (SUBDIRS): Added the es/ directory
	supplied by Jose L. Redrejo Rodriguez.  Thanks a lot!

2004-09-29  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (dist_man_MANS): Added simple man page.

2004-09-25  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/Makefile.am (HTML): Added missing 'programs.html'